# OCR_SERVICE

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: deps.py
app/api/v1/routes/: __init__.py  health.py  ocr.py
app/api/v1/schemas/: requests.py  responses.py
app/core/: ai_service.py  config.py  exceptions.py
app/engines/: base.py  registry.py
app/engines/dolphin/: engine.py  prompts.py  utils.py
app/engines/dolphin/backends/: base.py  transformers.py  vllm.py
app/engines/gemini/: engine.py  prompts.py
app/services/: ocr_service.py
deploy/: start.sh  supervisord.conf
