[project]
name = "ocr-service"
version = "0.1.0"
description = "OCR microservice converting document images to Markdown, HTML, or JSON"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.129.0",
    "google-genai>=1.63.0",
    "httpx>=0.28.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "qwen-vl-utils>=0.0.14",
    "tenacity>=9.1.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.6.0"]
